update title and fix spacing login

--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -33,6 +33,13 @@
 	position: absolute;
 	bottom: 0;
 }
+.container-policies{
+	margin-left: 24px;
+	margin-right: 24px;
+}
+.container-policies p{
+	text-align: center;
+}
 @media only screen and (max-width:890px){
 	.container-img{
 		display: none;
@@ -55,6 +62,9 @@
 @media only screen and (max-width:1100px){
 	.container-img img{
 		width: 550px;
+	}
+	.container-policies p{
+		text-align: center;
 	}
 }
 @media only screen and (max-width:600px){
